[package]
name = "discord_bot_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
tokio = { version = "1", features = ["full"] }
twilight-cache-inmemory = "0.12.0"
twilight-gateway = "0.12.0"
twilight-http = "0.12.0"
twilight-model = "0.12.1"
anyhow = "1.0.58"